welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:7: error: not found: value a
		if(a >= 60 && a<=90)
                   ^squirrelPlay:14: error: not found: value a
		if(a >= 60 && a<=100)
                   ^