welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {

var bool = false;

	if(isSummer)
	{
		if(a >= 60 && a<=90)
		{
			bool = true;
		}
	}
	else
	{
		if(a >= 60 && a<=100)
		{
			bool = true;
		}
	}

	return bool;
}